Version 2 (13 November 2016)
===========================

- What's New Dialog
- End to end UI Integration Tests
- Automatic promotion to Play Store

Version 1 (16 October 2016)
===========================

- Hello World app and build