@@ -5,15 +5,12 @@
     <string name="pkey_version_number">version_number</string>
     <string name="whatsNewLatest">
         <![CDATA[
-        <h4>Version 1 (13 November 2016)</h4>
-        \u2022 What\'s New Dialog
-        <br>
-        \u2022 End to end UI Integration Tests
-        <br>
-        \u2022 Automatic promotion to Play Store
+        <h4>Version 3 (15 November 2016)</h4>
+        \u2022 Can add simple items to a list (no persistence)
         ]]>
     </string>
     <string name="whatsNewMoreButtonText">Show full history</string>
     <string name="typeMe">typeMe</string>
     <string name="add">add</string>
+    <string name="addItemText">Type item name</string>
 </resources>
