@@ -7,7 +7,7 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-public class ListActivityUnitTest {
+public class ListActivityTest {
     @Test
     public void showWhatsNewDialogIfNewVersion() throws Exception {
         SwrlPreferences preferences = mock(SwrlPreferences.class);
