@@ -1,5 +1,9 @@
+Version 3 (15 November 2016)
+============================
+- Can add simple items to a list (no persistence)
+
 Version 2 (13 November 2016)
-===========================
+============================
 
 - What's New Dialog
 - End to end UI Integration Tests
